# SharpEuler

./: .gitignore  LICENSE  README.md  pyproject.toml
_incoming/: ablation_wethink_kl_windows.py  eval_cmmmu_val.py  exp50_strong_ce_weighted.py  exp50_strong_margin_weighted.py  fm.py  model.py  nn.py  order_eval_vlmeval.py  order_eval_vlmeval_fixed.py  run_ordering_matrix.py  vlm_paper_extractor.py  widget_vlm.py
checkpoints/: fm_branchy_flower_3.pth  fm_rotgrid.pth
scripts/: flux_calibrate_profile.py  flux_eval_block.py  flux_metrics.py
src/sharpeuler/: __init__.py
src/sharpeuler/baselines/: __init__.py  ets.py  shifted.py  uniform.py
src/sharpeuler/core/: __init__.py  calibration.py  samplers.py  schedule.py
src/sharpeuler/metrics/: __init__.py  prdc.py  wasserstein.py
src/sharpeuler/toys/: __init__.py  datasets.py  models.py
tests/: test_schedule.py
