[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sharpeuler"
version = "0.1.0"
description = "Sharpness-Aware Flow Matching"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Aditi Gupta"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "tqdm>=4.65",
    "pillow>=10.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
]

[project.optional-dependencies]
flux = [
    "diffusers>=0.30",
    "transformers>=4.40",
    "accelerate>=0.30",
    "torch-fidelity>=0.3",
    "open-clip-torch>=2.24",
]
toys = [
    "POT>=0.9",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "black>=24.0",
]

[project.urls]
Repository = "https://github.com/aditiii12/SharpEuler"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
